--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_nav_producto_to_addProductoFragment"
             app:destination="@id/addProductoFragment" />
+        <action
+            android:id="@+id/action_nav_producto_to_updateProductoFragment"
+            app:destination="@id/updateProductoFragment" />
     </fragment>
 
     <fragment
@@ -34,5 +37,17 @@
         <action
             android:id="@+id/action_addProductoFragment_to_nav_producto"
             app:destination="@id/nav_producto" />
+    </fragment>
+    <fragment
+        android:id="@+id/updateProductoFragment"
+        android:name="com.example.e_commerce_store_fancy_pants.ui.producto.UpdateProductoFragment"
+        android:label="Actualizar Producto"
+        tools:layout="@layout/fragment_update_producto" >
+        <action
+            android:id="@+id/action_updateProductoFragment_to_nav_producto"
+            app:destination="@id/nav_producto" />
+        <argument
+            android:name="producto"
+            app:argType="com.example.e_commerce_store_fancy_pants.model.Producto" />
     </fragment>
 </navigation>
