--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <item
         android:id="@+id/menu_delete"
         android:icon="@drawable/ic_delete"
-        android:title="delete_menu"
         android:iconTint="@color/white"
+        android:title="@string/menu_delete"
         app:showAsAction="ifRoom" />
-
 </menu>
