--- a/app/src/main/res/menu/principal.xml
+++ b/app/src/main/res/menu/principal.xml
@@ -4,7 +4,8 @@
     <item
         android:id="@+id/action_logoff"
         android:icon="@drawable/ic_logoff"
+        android:iconTint="@color/white"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="ifRoom" />
+        android:title="Cerrar Sesión"
+        app:showAsAction="never" />
 </menu>
